[package]
name = "wasm-game-of-life"
version = "0.1.0"
authors = ["doudou <rayallen1996@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.84"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
cfg-if = "1.0.0"
js-sys = "0.3.77"
web-sys = { version = "0.3.77", features = ["console"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.34"

[profile.release]
# Tell `rustc` to optimize for small code size.
lto = true         # Enables link-time optimization
opt-level = "z"    # Optimize for size (rather than speed)
strip = true       # Strip debug symbols (Rust 1.70+ only)
codegen-units = 1  # Combine codegen units so the optimizer sees the entire program
panic = "abort"    # Smaller code by removing panic 'unwinding'
